- change to thymeleaf layout

--- a/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/layout/main-layout.html
+++ b/demo-communication-web/src/main/resources/META-INF/resources/WEB-INF/layout/main-layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title th:replace="${title}">Page 1 Title</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/META-INF/resources/css/main.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
     <!-- Other javascript, css source files -->
     <th:block th:replace="${otherStaticResources!=null} ?${otherStaticResources}: ~{}"></th:block>
 </head>
